+ Fix Scroll + Fixed Footer + Fix z-index Header

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
     justify-content: space-between;
     padding: 3px 0px;
     width: 100%;
-    z-index: 
+    z-index:10;
 }
 .header-left, .header-right{
     display: flex;
@@ -94,12 +94,13 @@ footer{
     display: flex;
     justify-content: space-between;
     background-color: #1b1b1b;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     align-items: center;
     padding: 10px 30px;
+    z-index: 10;
 }
 .footer-left, .footer-center, .footer-right{
     flex-flow: row nowrap;
